--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,24 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.Header {
+  background-color: #8184be;
+  padding: 1rem;
+}
+
+.Header h1 {
+  color: rgb(0, 166, 255);
+
+}
+
+.card {
+  border: 1px solid black;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.card:hover {
+  cursor: pointer;
+  box-shadow: 5px 5px 10px 0px;
+}
